<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/budget_add_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="@color/white"
    tools:ignore="ExtraText">

    <!-- Section 1: Scrollable List using RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/budgets_recycler"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="125dp"
        android:scrollbars="vertical"/>

    <!-- Section 2: Success Message -->
    <LinearLayout
        android:id="@+id/succes_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budgets_recycler">

        <ImageView
            android:id="@+id/success_message_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/bell" />

        <TextView
            android:id="@+id/success_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buget_salvat_succes"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <!-- Section 3: Warning Message -->
    <LinearLayout
        android:id="@+id/warning_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budgets_recycler">

        <ImageView
            android:id="@+id/warning_message_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/important"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/warning_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completeaza_campuri"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:visibility="invisible" />
    </LinearLayout>

    <!-- Section 4: Add New Section -->
    <LinearLayout
        android:id="@+id/new_budget_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/succes_section" >

        <!-- Section Title -->
        <TextView
            android:id="@+id/newSectionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noua_sectiune"
            android:drawablePadding="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_gravity="center" />

        <!-- Inputs for Name and Amount -->
        <EditText
            android:id="@+id/sectionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/denumire"
            android:layout_marginVertical="8dp"
            android:padding="8dp"
            android:background="@color/peach" />

        <EditText
            android:id="@+id/sectionAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/suma"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:background="@color/peach"
            android:inputType="number" />

        <!-- Save and Cancel Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="0dp">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salveaza"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anuleaza"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Section 5: Footer Navigation -->
    <LinearLayout
        android:id="@+id/footer_menu"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/light_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_budget_section"
        android:weightSum="4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/add_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_section"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center" />

            <ImageButton
                android:id="@+id/add_section_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@null"
                android:src="@drawable/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_section"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/modify_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_section"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/modify_section_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@null"
                android:src="@drawable/pencil"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/modify_section"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/emergency_fund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fond_urgenta"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/emergency_fund_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/bag"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emergency_fund"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/learn_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invata"
                android:drawablePadding="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/learn_section_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:src="@drawable/phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/learn_section"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>